hphp/hack/test/typecheck/tc_in_enum_class.php.rust_provider_backend.exp
ERROR: File "tc_in_enum_class.php", line 103, characters 20-23:
Invalid argument (Typing[4110])
  File "tc_in_enum_class.php", line 47, characters 23-25:
  Expected `int`
  File "tc_in_enum_class.php", line 91, characters 29-44:
  But got `<expr#8>::T::TSource as IAntParent::T::TSource`
  File "tc_in_enum_class.php", line 91, characters 38-44:
  This type argument to `IAntGetter` only allows supertypes (it is contravariant)
ERROR: File "tc_in_enum_class.php", line 103, characters 20-23:
Invalid argument (Typing[4110])
  File "tc_in_enum_class.php", line 47, characters 23-25:
  Expected `int`
  File "tc_in_enum_class.php", line 91, characters 38-44:
  But got `IAntParent::T::TSource where \IAntParent::T::TSource super <expr#8>::T::TSource, \IAntParent::T::TSource as ParentAccessors::TSource`
  by accessing the type constant `TSource`
  File "tc_in_enum_class.php", line 91, characters 29-44:
  on the expression dependent type <expr#8>::T
  File "tc_in_enum_class.php", line 103, characters 10-13:
    where `<expr#8>` is a reference to this expression
ERROR: File "tc_in_enum_class.php", line 103, characters 20-23:
Invalid argument (Typing[4110])
  File "tc_in_enum_class.php", line 47, characters 23-25:
  Expected `int`
  File "tc_in_enum_class.php", line 91, characters 38-44:
  But got `ParentAccessors::TSource super IAntParent::T::TSource`
  by accessing the type constant `TSource`
  File "tc_in_enum_class.php", line 91, characters 29-44:
  on the expression dependent type <expr#8>::T
  File "tc_in_enum_class.php", line 103, characters 10-13:
    where `<expr#8>` is a reference to this expression
ERROR: File "tc_in_enum_class.php", line 103, characters 20-23:
Invalid argument (Typing[4110])
  File "tc_in_enum_class.php", line 47, characters 23-25:
  Expected `int`
  File "tc_in_enum_class.php", line 91, characters 38-44:
  But got `mixed` arising from an implicit `as mixed` constraint on this type
ERROR: File "tc_in_enum_class.php", line 103, characters 20-23:
Invalid argument (Typing[4110])
  File "tc_in_enum_class.php", line 103, characters 20-23:
  Expected a class with a constant `Bar`
  File "tc_in_enum_class.php", line 90, characters 24-30:
  But got `<expr#8>::T as IAntParent::T`
  File "tc_in_enum_class.php", line 103, characters 10-13:
    where `<expr#8>` is a reference to this expression
